FIX #2095 z-index 1 in autocompletion

--- a/maarch_entreprise/trunk/css/styles.css
+++ b/maarch_entreprise/trunk/css/styles.css
@@ -3132,6 +3132,7 @@ div.autocomplete {
   border: 1px solid #888;
   margin: 0px;
   padding: 0px;
+  z-index: 1;
 }
 
 div.autocomplete ul {
